--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,6 @@
 default: &default
   adapter: postgresql
-  template: template0
-  encoding: unicode
+  encoding: utf8
   username: ildarsafin
   host: localhost
   password:
@@ -18,3 +17,6 @@ test:
 production:
   <<: *default
   database: goalgame_production
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
